--- a/RNN_ShakeGen.ipynb
+++ b/RNN_ShakeGen.ipynb
@@ -14,7 +14,7 @@
     "from keras.utils import np_utils\n",
     "\n",
     "# load the raw sonnets, splicing on new lines\n",
-    "data = np.loadtxt('shakespeare.txt', delimiter='\\n', dtype=str)"
+    "data = np.loadtxt('/data/shakespeare.txt', delimiter='\\n', dtype=str)"
    ]
   },
   {
